I fixed the fact that i used 1 single class instead of 2 classes

--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
 
-    <button class="button first-element">Click Me!</button>
+    <button class="first-element">Click Me!</button>
 
-    <button class="button second-element">No, Click Me!</button>
+    <button class="second-element">No, Click Me!</button>
 
   </body>
 </html>
